--- a/BloodBank/BloodBank/Views/Shared/_Layout.cshtml
+++ b/BloodBank/BloodBank/Views/Shared/_Layout.cshtml
@@ -17,6 +17,10 @@
             <a href="@Url.Action("Index", "Donor")">
                 Donors
             </a>
+            &nbsp | &nbsp
+            <a href="@Url.Action("Edit", "Donor")">
+                Edit Donors
+            </a>
         </nav>
     </header>
     @RenderBody()
