--- a/BloodBank/BloodBank/Content/Site.css
+++ b/BloodBank/BloodBank/Content/Site.css
@@ -2,7 +2,7 @@
     font-size: .85em;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
     color: #232323;
-    background-color: #fff;
+    background-color: #808080;
 }
 
 header, footer, nav, section {
