--- a/BloodBank/BloodBank/Views/Donor/Edit.cshtml
+++ b/BloodBank/BloodBank/Views/Donor/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model BloodBank.Models.Donor
+
+@{
     ViewBag.Title = "Edit";
 }
 
@@ -7,6 +9,34 @@
     <span>
         @Html.HiddenFor( x=> x.DonorID)
     </span>
-
-
+    <div>
+        @Html.LabelFor(x => x.Name)
+    @Html.TextBoxFor(x => x.Name)
+    @Html.ValidationMessageFor(x => x.Name)
+    </div>
+    <div>
+    @Html.LabelFor(x => x.BloodType)
+    @Html.TextBoxFor(x => x.BloodType)
+    @Html.ValidationMessageFor(x => x.BloodType)
+    </div>
+    <div>
+    @Html.LabelFor(x => x.Address)
+    @Html.TextBoxFor(x => x.Address)
+    @Html.ValidationMessageFor(x => x.Address)
+    </div>
+    <div>
+    @Html.LabelFor(x => x.ContactNumber)
+    @Html.TextBoxFor(x => x.ContactNumber)
+    @Html.ValidationMessageFor(x => x.ContactNumber)
+    </div>
+    <div>
+    @Html.LabelFor(x => x.MedicalReport)
+    @Html.TextBoxFor(x => x.MedicalReport)
+    @Html.ValidationMessageFor(x => x.MedicalReport)
+    </div>
+    <input type="submit" value="Submit" />
 </form>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
